cmake_minimum_required(VERSION 3.15)
project(cevaplar)

set(CMAKE_CXX_STANDARD 14)

add_executable(cevaplar main.cpp)
add_executable(soru2  soru2.cpp)
add_executable(soru3  soru3.cpp)
add_executable(soru4  soru4.cpp)
add_executable(soru5  soru5.cpp)
add_executable(soru6  soru6.cpp)
add_executable(soru7  soru7.cpp)
add_executable(soru8  soru8.cpp)
add_executable(soru9  soru9.cpp)
add_executable(soru10  soru10.cpp)
add_executable(soru11  soru11.cpp)